--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -9,6 +9,16 @@ name: Deploy to Firebase Hosting on merge
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
+    environment: production
+    env:
+        VITE_APP_API_KEY: ${{secrets.VITE_APP_API_KEY}}
+        VITE_APP_AUTH_DOMAIN: ${{secrets.VITE_APP_AUTH_DOMAIN}}
+        VITE_APP_DATABASE_URL: ${{secrets.VITE_APP_DATABASE_URL}}
+        VITE_APP_PROJECT_ID: ${{secrets.VITE_APP_PROJECT_ID}}
+        VITE_APP_STORAGE_BUCKET: ${{secrets.VITE_APP_STORAGE_BUCKET}}
+        VITE_APP_MESSAGING_SENDER_ID: ${{secrets.VITE_APP_MESSAGING_SENDER_ID}}
+        VITE_APP_APP_ID: ${{secrets.VITE_APP_APP_ID}}
+        VITE_APP_MEASUREMENT_ID: ${{secrets.VITE_APP_MEASUREMENT_ID}}
     steps:
       - uses: actions/checkout@v4
       - run: npm ci && npm run build
